# bessel-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  coverage.sh  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
.zed/: debug.json
amos-bessel-rs/: CHANGELOG.md  Cargo.toml  README.md
amos-bessel-rs/benches/: bessel_bench.rs
amos-bessel-rs/src/: lib.rs  reflections.rs  types.rs
amos-bessel-rs/src/amos/: asymptotic_i.rs  entry_points.rs  gamma_ln.rs  i_power_series.rs  machine.rs  mod.rs  overflow_checks.rs  test.f90  translator.rs  utils.rs
amos-bessel-rs/src/bessel_zeros/: mod.rs  test.rs
amos-bessel-rs/src/test_utils/: bessel_h_wrappers.rs  equality.rs  mod.rs  parametrisation.rs
amos-bessel-rs/src/tests/: bessel_h_wrappers.rs  grid_tests.rs  mod.rs  random_tests.rs  test_bessel_funcs.rs  test_bessel_funcs_f32.rs  test_bessel_zeros.rs  test_gamma_ln.rs  test_large_n.rs  test_machine_consts.rs  utils.rs
amos-bessel-rs/tests/: grid_tests.rs  random_tests.rs  test_bessel_funcs.rs  test_large_n.rs
amos-bessel-rs/tests/common/: mod.rs  parametrisation.rs
bessel-bench/: Cargo.toml
bessel-bench/bench/: mod.rs
bessel-bench/src/: lib.rs
bessel-rs/: Cargo.toml  build.rs
bessel-rs/.cargo/: config.toml
bessel-rs/benches/: bessel_bench.rs
bessel-rs/src/: lib.rs  reflections.rs  types.rs
bessel-rs/src/amos/: asymptotic_i.rs  bindings.rs  entry_points.rs  gamma_ln.rs  mod.rs  overflow_checks.rs  translator.rs  utils.rs
bessel-rs/src/bessel_zeros/: mod.rs
bessel-rs/src/go/: j0.rs  j1.rs  jn.go  jn.rs  mod.rs  test_go.rs  test_real.rs
bessel-rs/src/tests/: bessel_h_wrappers.rs  fortran_calls.rs  grid_tests.rs  mod.rs  parametrisation.rs  random_tests.rs  test_bessel_funcs.rs  test_bessel_zeros.rs  test_large_n.rs  utils.rs
bessel-zeros/: CHANGELOG.md  Cargo.toml  README.md
bessel-zeros/benches/: backend_bench.rs  zeros_bench.rs
bessel-zeros/src/: algorithm.rs  lib.rs
bessel-zeros/src/backend/: amos.rs  mod.rs  real.rs
bessel-zeros/tests/: bessel_zeros_tests.rs  integration_test.rs  simple_api_tests.rs
bessel-zeros/tests/common/: mod.rs
bessel_zeros/: Cargo.toml
bessel_zeros/src/: lib.rs
bessel_zeros/tests/: integration_test.rs
fortran-amos/: Cargo.toml  build.rs
fortran-amos-testing/: Cargo.toml
fortran-amos-testing/src/: amos_iso_c_fortran_wrapper.f90  lib.rs
fortran-amos/src/: amos_iso_c_fortran_wrapper.f90  bindings.rs  lib.rs  test.f90
real-bessel/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICES  README.md
real-bessel/benches/: bench_against_amos.rs
real-bessel/src/: j0.rs  j1.rs  jn.rs  lib.rs  types.rs
real-bessel/tests/: common.rs  grid_tests.rs  integration_test.rs
src/: lib.rs
src/amos/: bindings.rs  gamma_ln.rs  i_power_series.rs  machine.rs  mod.rs  overflow_checks.rs  test.f90  translator.rs  utils.rs  z_asymptotic_i.rs  z_power_series.rs
src/bench/: mod.rs
src/tests/: bessel_h_wrappers.rs  fortran_calls.rs  mod.rs  parametrisation.rs  random_tests.rs  test_bessel_funcs.rs  test_gamma_ln.rs  test_large_n.rs  test_machine_consts.rs  utils.rs
