[package]
name = "bessel-rs"
version = "0.1.0"
edition = "2024"

[features]
# default = ["random_tests"]
random_tests = []

[dependencies]
num = "0.4.3"
thiserror = "2.0.11"

[dev-dependencies]
approx = { version = "0.5.1", features = ["num-complex"] }
complex-bessel-rs = "1.2.1"
rand = "0.9.0"
rstest = "0.25.0"
rstest_reuse = "0.7.0"
