[package]
name = "amos-bessel-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An idiomatic rust translation of Amos algorithm for calculating bessel functions"
repository = "https://github.com/etfrogers/bessel-rs"
keywords = ["bessel-functions"]

[features]
# default = ["random_tests"]
random_tests = []
test-utils = ["rstest", "rstest_reuse", "fortran-amos"]
[build-dependencies]
cc = { version = "1.2", optional = true }

[dependencies]
conv = "0.3.3"
itertools = "0.14.0"
num = "0.4.3"
paste = "1.0.15"
thiserror = "2.0.17"
approx = { version = "0.5.1", features = ["num-complex"] }
rstest = { version = "0.26.1", optional = true }
rstest_reuse = { version = "0.7.0", optional = true }
fortran-amos = { path = "../fortran-amos", optional = true }


[dev-dependencies]
complex-bessel-rs = "1.3"
# complex-bessel-rs = { git = "https://github.com/etfrogers/complex-bessel-rs.git", branch = "bugfix-besseli" }
rand = "0.9.2"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
criterion = "0.7.0"
complex-bessel = "0.2.0"
pymath = "0.2.0"
fortran-amos = { path = "../fortran-amos" }

[[bench]]
name = "bessel_bench"
harness = false


[[test]]
name = "grid_tests"
path = "tests/grid_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "random_tests"
path = "tests/random_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "test_bessel_funcs"
path = "tests/test_bessel_funcs.rs"
required-features = ["test-utils"]

[[test]]
name = "test_large_n"
path = "tests/test_large_n.rs"
required-features = ["test-utils"]
