[package]
name = "bessel-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["run-fortran-tests"]
# default = ["run-fortran-tests", "random_tests"]
run-fortran-tests = ["dep:cc"]
random_tests = []

[build-dependencies]
cc = { version = "1.2", optional = true }

[dependencies]
conv = "0.3.3"
itertools = "0.14.0"
num = "0.4.3"
paste = "1.0.15"
thiserror = "2.0.17"

[dev-dependencies]
approx = { version = "0.5.1", features = ["num-complex"] }
complex-bessel-rs = "1.3"
# complex-bessel-rs = { git = "https://github.com/etfrogers/complex-bessel-rs.git", branch = "bugfix-besseli" }
rand = "0.9.2"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
csv = "1.4.0"
criterion = "0.7.0"
complex-bessel = "0.2.0"
pymath = "0.2.0"

[[bench]]
name = "bessel_bench"
harness = false
