[package]
name = "bessel-zeros"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A crate for calculating zeros of Bessel functions"
repository = "https://github.com/etfrogers/bessel-rs"
keywords = ["bessel-functions"]

[dependencies]
amos-bessel-rs = { path = "../amos-bessel-rs", version = ">=0.3.0" }
conv = "0.3.3"
num = "0.4.3"

[dev-dependencies]
approx = { version = "0.5.1", features = ["num-complex"] }
rstest = "0.26.1"
csv = "1.4.0"
criterion = "0.5.1"

[[bench]]
name = "zeros_bench"
harness = false
