[package]
name = "fortran-amos-testing"
version = "0.1.0"
edition = "2024"
readme = false
description = "Internal testing utility for amos-bessel-rs. Not intended for direct use."
license = "MIT OR Apache-2.0"
repository = "https://github.com/etfrogers/bessel-rs"

[build-dependencies]
cc = "1.2.60"

[dependencies]
num = "0.4.3"
