[package]
name = "real-bessel"
version = "0.1.0"
edition = "2024"
description = "A pure Rust implementation of real-valued Bessel functions of the first and second kinds, for integer orders and real arguments."
license = "MIT OR Apache-2.0"
repository = "https://github.com/etfrogers/bessel-rs"
keywords = ["bessel", "mathematics", "special-functions"]
categories = ["science", "mathematics", "algorithms"]
readme = "README.md"

[dependencies]
thiserror = "2.0.17"

[dev-dependencies]
amos-bessel-rs = { path = "../amos-bessel-rs", version = ">=0.3.0" }
approx = "0.5.1"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
criterion = "0.8.2"
itertools = "0.14.0"

[[bench]]
name = "bench_against_amos"
harness = false
